...
    }
}

struct PieChartView_Previews: PreviewProvider {
    static var previews: some View {
        PieChartView(slices: [
            PieSliceData(startAngle: 0, endAngle: 120, color: .red, value: 3, title: "Yüksek"),
            PieSliceData(startAngle: 120, endAngle: 240, color: .orange, value: 2, title: "Orta"),
            PieSliceData(startAngle: 240, endAngle: 360, color: .blue, value: 1, title: "Düşük")
        ], totalValue: 6)
        .frame(width: 200, height: 200)
        .padding()
    }
...
